[package]
name = "mqtt-webhook"
version = "0.1.0"
authors = ["Alexandre Peyroux <alex@px.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
log = "0.4.8"
simplelog = "0.7.2"
actix-web = "1.0.7"
reqwest = "0.9.17"